Added routes, worked on NavBar, and FuelQuote Forms

--- a/src/components/nav-bar/NavBar.css
+++ b/src/components/nav-bar/NavBar.css
@@ -7,10 +7,14 @@ nav {
     color: white;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 .nav-links{
     width: 50%;
     display: flex;
     justify-content: space-around;
-    list-style: none;
     align-items: center;
 }
