--- a/src/components/Login-Registration/Logins.scss
+++ b/src/components/Login-Registration/Logins.scss
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 
 .App {
+  margin-top: 5%;
   text-align: center;
   display: flex;
   justify-content: center;
