--- a/src/components/FuelQuote/FuelQuote.scss
+++ b/src/components/FuelQuote/FuelQuote.scss
@@ -64,6 +64,28 @@
     padding-bottom: 10px;
     justify-content: center;
   }
+  .button2 {
+    display: flex;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 10px;
+    justify-content: left;
+  }
+  .changeAddress {
+    width: 100%;
+    color: #fff;
+    background-color: #339DFF;
+    margin-bottom: 15px;
+    border-radius: 12px;
+    font-size: 16px;
+    line-height: 30px;
+    transition: all 0.3s;
+  }
+  .changeAddress:hover {
+    background: #fff;
+    color: #339DFF;
+    box-shadow: 0 4px 4px rgba(83, 100, 255, 0.32);
+  }
   .calculate {
     width: 100%;
     color: #fff;
