--- a/src/components/Login-Registration/Logins.scss
+++ b/src/components/Login-Registration/Logins.scss
@@ -71,7 +71,7 @@
     flex-direction: column;
     justify-content: center;
     height: 90%;
-    background-color: #3498db;
+    background-color: rgb(224, 9, 9);
     width: 100%;
     position: absolute;
     right: -34%;
@@ -111,13 +111,13 @@
   font-size: 21px;
   padding: 5px 20px;
   border: 0;
-  background-color: #3498db;
+  background-color: rgb(224, 9, 9);
   color: #fff;
   border-radius: 3px;
   transition: all 250ms ease-in-out;
   cursor: pointer;
   &:hover {
-    background-color: #2386c8;
+    background-color: rgb(224, 9, 9);
   }
   &:focus {
     outline: none;
