--- a/src/components/nav-bar/NavBar.css
+++ b/src/components/nav-bar/NavBar.css
@@ -3,7 +3,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     min-height: 10vh;
-    background: gray;
+    background: rgb(224, 9, 9);
     color: white;
 }
 
@@ -11,11 +11,13 @@ nav {
     text-decoration: none;
     color: white;
     font-family: sans-serif;
+    font-size: larger;
 }
 
 .nav-item:hover {
     text-decoration: none;
-    color: blue;
+    background-color: rgb(136, 7, 7);
+    color: white;
 }
 
 .nav-links{
@@ -33,8 +35,11 @@ nav {
     padding:0;
     color: white;
     font-family: sans-serif;
+    font-size: large;
 }
 
 .signout:hover{
-    color:blue;
+    text-decoration: none;
+    background-color: rgb(136, 7, 7);
+    color: white;
 }
