--- a/src/components/FuelQuote/FuelQuote.scss
+++ b/src/components/FuelQuote/FuelQuote.scss
@@ -74,7 +74,7 @@
   .changeAddress {
     width: 100%;
     color: #fff;
-    background-color: #339DFF;
+    background-color: rgb(136, 7, 7);
     margin-bottom: 15px;
     border-radius: 12px;
     font-size: 16px;
@@ -83,21 +83,24 @@
   }
   .changeAddress:hover {
     background: #fff;
-    color: #339DFF;
+    color: rgb(224, 9, 9);
     box-shadow: 0 4px 4px rgba(83, 100, 255, 0.32);
   }
   .calculate {
     width: 100%;
     color: #fff;
-    background-color: #339DFF;
+    background-color: rgb(224, 9, 9);
     margin-bottom: 15px;
     border-radius: 12px;
     font-size: 16px;
     line-height: 30px;
     transition: all 0.3s;
   }
-  .calculate:hover {
+  .calculate:hover:enabled {
     background: #fff;
-    color: #339DFF;
+    color: rgb(224, 9, 9);
     box-shadow: 0 4px 4px rgba(83, 100, 255, 0.32);
+  }
+  .calculate:disabled {
+    background-color: gray;
   }
