--- a/src/components/nav-bar/NavBar.css
+++ b/src/components/nav-bar/NavBar.css
@@ -11,17 +11,16 @@ nav {
     text-decoration: none;
     color: white;
     font-family: sans-serif;
-    font-size: larger;
+    font-size: 20px;
 }
 
 .nav-item:hover {
-    text-decoration: none;
-    background-color: rgb(136, 7, 7);
+    text-decoration: underline;
     color: white;
 }
 
 .nav-links{
-    width: 50%;
+    width: 60%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -35,11 +34,10 @@ nav {
     padding:0;
     color: white;
     font-family: sans-serif;
-    font-size: large;
+    font-size: 20px;
 }
 
 .signout:hover{
-    text-decoration: none;
-    background-color: rgb(136, 7, 7);
+    text-decoration: underline;
     color: white;
 }
